--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "popper.js": "1.16.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "yarn": "^1.22.10"
   },
   "version": "0.1.0",
   "devDependencies": {
