プログラム実行機能のロジック部分を実装(画面レイアウトは未実装)

--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -9,4 +9,4 @@ person1:
   password_digest: <%= BCrypt::Password.create('foo') %>
 person2:
   name: person2
-  password_digest: <%= BCrypt::Password.create('bar') %>
+  password_digest: <%= BCrypt::Password.create('foo') %>
