--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,36 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: runby
+  host: <%= ENV['RUNBY_DB_HOST'] %>
+  port: <%= ENV.fetch("RUNBY_DB_PORT") { 3306 } %>
+  username: <%= ENV['RUNBY_DB_USERNAME'] %>
+  password: <%= ENV['RUNBY_DB_PASSWORD'] %>
+  sslca: ./DigiCertGlobalRootCA.crt.pem
+  sslmode: required
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: sqlite3
   database: db/test.sqlite3
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: runby
+  host: <%= ENV['RUNBY_DB_HOST'] %>
+  port: <%= ENV.fetch("RUNBY_DB_PORT") { 3306 } %>
+  username: <%= ENV['RUNBY_DB_USERNAME'] %>
+  password: <%= ENV['RUNBY_DB_PASSWORD'] %>
